# tsdr

./: README.md  pyproject.toml
tsdr/: __init__.py  autocorrelation.py  determinism.py  diffusion.py  latentvariable.py  nonstationarity.py  predictability.py  slowness.py
